# CallAnalysis

./: .env.example  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  alembic.ini  call_analysis_original.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_import.py
.claude/: settings.local.json
.github/workflows/: ci.yml  dependencies.yml
config/: nginx.conf
examples/: basic_usage.py
migrations/: env.py
scripts/: deploy-prod.sh  init-db.sql  start-dev.sh
src/call_analysis/: __init__.py  analyzer.py  api.py  cli.py  coaching.py  config.py  database.py  main.py  models.py  predictor.py  server.py
src/call_analysis/agents/: __init__.py  agent_manager.py  analysis_orchestrator.py  base_agent.py  call_acquisition_agent.py  monitoring_agent.py  workflow_agent.py
src/call_analysis/cli/: __init__.py  agent_commands.py
src/call_analysis/nlp/: __init__.py  advanced_analyzer.py  entity_extraction.py  intent_detection.py  topic_modeling.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_models.py
tests/integration/: test_full_workflow.py
tests/performance/: test_benchmarks.py
